test/cases/compile_errors/stage1/obj/shlExact_shifts_out_1_bits.zig
comptime {
    const x = @shlExact(@as(u8, 0b01010101), 2);
    _ = x;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:15: error: operation caused overflow
